--- a/sigapp/vs2019/sigapp.vcxproj
+++ b/sigapp/vs2019/sigapp.vcxproj
@@ -284,7 +284,7 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
     </ClCompile>
